# bazel-qt-example

labs/basics/task1/: BUILD.bazel  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticketdialog.cpp  ticketdialog.h
labs/basics/task2/: BUILD.bazel  canvas.cpp  canvas.h  demo.webm  mainwindow.cpp  mainwindow.h  overcanvas.cpp  overcanvas.h  painttoolbar.cpp  painttoolbar.h  readme.md
labs/duolingo/: BUILD.bazel  CMakeLists.txt  difficultydialog.cpp  difficultydialog.h  exercisedata.h  mainwindow.cpp  mainwindow.h
labs/graphics/: BUILD.bazel  CMakeLists.txt  README.md  controller.cpp  controller.h  lightsource.cpp  lightsource.h  main.cpp  mainwindow.cpp  mainwindow.h  plane.cpp  plane.h  polygon.cpp  polygon.h  ray.cpp  ray.h
