load("@rules_qt//:qt.bzl", "qt_cc_binary", "qt_cc_library")

qt_cc_library(
    name = "main_window",
    srcs = ["mainwindow.cpp", "plane.cpp", "controller.cpp", "polygon.cpp", "ray.cpp"],
    hdrs = ["mainwindow.h", "plane.h", "controller.h", "polygon.h", "ray.h"],
    deps = [
        "@rules_qt//:qt_core",
        "@rules_qt//:qt_gui",
        "@rules_qt//:qt_widgets",
    ],
)

qt_cc_binary(
    name = "graphics",
    srcs = ["main.cpp"],
    deps = [
        ":main_window",
        "@rules_qt//:qt_widgets",
    ],
)
